Improve ui for producers pages (#366)
* feat: new procer list

* fix: become producer

* feat: my_prod_prof + front update

* feat: improve form ui

* feat: trad + back to profile

* feat: update point of sale update

* feat: add ref to legal notice

* feat: no pos + prod + update liked prod

* fix: prod liked + No prod

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -385,6 +385,18 @@ body {
   margin-left: 2px;
 }
 
+.product-tag-icon {
+  width: 35px;
+  height: 35px;
+  margin-left: 10px;
+}
+
+.product-tag-empty-icon {
+  width: 27px;
+  height: 27px;
+  margin-left: 10px;
+}
+
 .allergen-tag-icon-red {
   width: 30px;
   height: 30px;
