--- a/app/views/point_of_sales/new.html.erb
+++ b/app/views/point_of_sales/new.html.erb
@@ -1,7 +1,5 @@
 <div class="uk-container uk-padding">
-  <h2 class="title"><%= t('point_of_sale.new') %></h2>
+  <h2 class="uk-text-center title"><%= t('point_of_sale.new') %></h2>
 
   <%= render 'form', point_of_sale: @point_of_sale %>
-
-  <%= link_to t('point_of_sale.back'), point_of_sales_path %>
 </div>
