--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -13,6 +13,17 @@
                       slimselectPlaceholder: t('slimselect.tags.placeholder'),
                     } %>
 
+  <%= f.association :point_of_sales, as: :select, :label => t("point_of_sale.title"),
+                    input_html: {class: 'uk-checkbox uk-margin-left'},
+                    collection: PointOfSale.order(:name).where(user: current_user).includes(:address).all.map {|t|
+                      [t.name + " (" + t.address.entilted + " / " + t.address.city + ")", t.id]}, input_html: {
+      multiple: true,
+      slimselect: true,
+      slimselectNoResult: t('slimselect.point_of_sales.no_result'),
+      slimselectSearchPlaceholder: t('slimselect.point_of_sales.search_placeholder'),
+      slimselectPlaceholder: t('slimselect.point_of_sales.placeholder')
+    } %>
+
   <%= f.input :ingredient, collection: Ingredient.all.order(:name).map {|v| [v.name, v.id]}.to_a,
               as: :select, :include_blank => false, :label => t("ingredient.label"), input_html: {
                       slimselect: true,
@@ -21,30 +32,35 @@
                       slimselectPlaceholder: t('slimselect.ingredients.placeholder')
               } %>
 
-  <%= f.association :point_of_sales, as: :select, :label => t("point_of_sale.title"),
-                    input_html: {class: 'uk-checkbox uk-margin-left'},
-                    collection: PointOfSale.order(:name).where(user: current_user).includes(:address).all.map {|t|
-                      [t.name + " (" + t.address.entilted + " / " + t.address.city + ")", t.id]}, input_html: {
-                        multiple: true,
-                        slimselect: true,
-                        slimselectNoResult: t('slimselect.point_of_sales.no_result'),
-                        slimselectSearchPlaceholder: t('slimselect.point_of_sales.search_placeholder'),
-                        slimselectPlaceholder: t('slimselect.point_of_sales.placeholder')
-                } %>
-
   <%= f.simple_fields_for :price, @product.price do |a| %>
-    <%= a.input :value, :label => t("products.price.label")%>
-    <%= a.input :quantity_type, :label => t("quantity_type.label"),
-                collection: QuantityType.all.order(:name).map {|v| [v.name, v.id]}.to_a,
-                as: :select, :include_blank => false, input_html: {
-                  slimselect: true,
-                  slimselectNoResult: t('slimselect.quantity_type.no_result'),
-                  slimselectSearchPlaceholder: t('slimselect.quantity_type.search_placeholder'),
-                  slimselectPlaceholder: t('slimselect.quantity_type.placeholder')
-                } %>
+
+    <div class="uk-margin-medium" uk-grid>
+      <div class="uk-width-1-2">
+        <%= a.input :value, :label => t("products.price.label")%>
+      </div>
+      <div class="uk-width-1-2">
+        <%= a.input :quantity_type, :label => t("quantity_type.label"),
+                    collection: QuantityType.all.order(:name).map {|v| [v.name, v.id]}.to_a,
+                    as: :select, :include_blank => false, input_html: {
+            slimselect: true,
+            slimselectNoResult: t('slimselect.quantity_type.no_result'),
+            slimselectSearchPlaceholder: t('slimselect.quantity_type.search_placeholder'),
+            slimselectPlaceholder: t('slimselect.quantity_type.placeholder')
+          } %>
+      </div>
+    </div>
+
   <% end %>
 
   <div class="uk-margin-medium">
-    <%= f.button :submit, "Valider" %>
+    <div class="uk-text-center">
+      <%= f.button :submit, t("recipe.creation.confirm") %>
+    </div>
   </div>
 <% end %>
+
+<div class="uk-margin-medium">
+  <div class="uk-text-center">
+    <%= link_to t("producer.back_to_profile"), :back, class: "uk-button uk-button-default" %>
+  </div>
+</div>
