fix missing image and footer image (#368)
je merges pour Adrien

--- a/app/views/cook/home/index.html.erb
+++ b/app/views/cook/home/index.html.erb
@@ -40,7 +40,7 @@
                     <% if recipe.image.attached? %>
                       background-image: url(<%= rails_blob_url recipe.image %>);
                       <% else %>
-                      <%= "https://picsum.photos/400/200" %>
+                      background-image: url(<%= asset_path('not_found.png') %>);
                       <% end %>
                     ">
                     </div>
