--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class="uk-container">
     <div class="uk-flex-middle uk-grid uk-text-center " uk-grid="">
       <div class="uk-width-expand@s uk-first-column">
-        <img data-src="<%= asset_path 'logo.png' %>" alt="iphone" height="150" width="150" uk-img>
+        <img data-src="<%= asset_path 'logo-black.png' %>" alt="iphone" height="150" width="150" uk-img>
         <ul class="uk-list">
           <li><span uk-icon="icon: home"></span> 5-9 rue du palais Rihour, 59 800 Lille, France</li>
         </ul>
