--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,7 +14,7 @@
       <%= f.input :newsletters, :label => "S'inscrire à la newsletter ?", input_html: { class: 'uk-checkbox uk-margin-left'}, as: 'boolean' %>
 
       <div class="uk-margin-medium">
-        <%= f.button :submit, t('.sign_up'), class: 'uk-width-1-1' %>
+        <%= f.button :submit, t('users.sessions.new.sign_up'), class: 'uk-width-1-1' %>
       </div>
     <% end %>
 
