API pour Profil (#377)
* feat: author model & controller, association for & from user

* feat: profil from other user is accesible

* feat: view for profil with allergens

* chore: unit test causing conflict

* fix: removing allergen from profil because not RGPD compliant

* feature: comment in profil page

* feature: stars in the comment

* feature: accessing author from comment

* fix: wording

* fix: avatar was broken

* fix: redirecting to profil from recipe

* fix: accessing user profil from navabar

* feature: API for profil of a user

* feature: removing a useless method

* fix: giving only ids for notebooks & recipes making the JSON simpler

* fix: optimisation on JSON

* fix: JSON wasn't compliant

* fix: wording in profil view

* fix: adding avatar et wording to link to profil in navbar

* fix: sending ids for recipes

* fix: you can now get everycomment and not the 4 last ones

* fix: fixing the image not found

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,12 @@
           <ul class="uk-nav uk-navbar-dropdown-nav">
             <% if user_signed_in? %>
               <li>
-                <%= link_to "Mon profil" , author_path(current_user), class: "uk-button-text uk-text-truncate" %>
+                <%= link_to author_path(current_user), class: "uk-margin-small-right" do %>
+                  <% if current_user.avatar.attached? %>
+                    <img class="uk-border-circle" width="30" height="30" src="<%= url_for(current_user.avatar.variant resize: '200x200') %>">
+                  <% end %>
+                  <%= "  Bienvenue #{current_user.first_name}" %>
+                <% end %>
                 <a href="<%= meal_plans_path %>">Qu'est-ce qu'on mange ?</a>
               </li>
               <li class="uk-nav-divider"></li>
